0.14.1.AA (PRE-RELEASE):
-----------------------
- Synced with Upstream v0.14.1
- Adds `HelpSize` Feature
  * Provides option to force non-standard or otherwise unsupported screen resolutions
    - This can help work around issues where pre-boot configuration screen are not displayed
    - The issues are typically EDID related or the auto-selection of incorrect/incompatible resolutions
    - This aspect of the `HelpSize` feature requires booting into systems that fully support the graphics
  * An `ExDPI` category for screens with resolutions of `6400 x 4000` or more was created
    - UI elements are scaled up by four (4) on such screens when UI element scaling is active
    - UI elements on other `HiDPI` screens are still scaled up by two (2) with UI scaling active
  * Enabled by default but can be disabled using a new `decline_help_size` configuration token
    - The new token sets RefindPlus to only apply up to 2x UI element scaling
- Fixes Legacy BIOS Boot on Certified UEFI Class 2 Macs
  * Optimisations for speed had potentially disabled legacy BIOS boot on some Macs
  * This bug was introduced in v0.13.3.AB (Commit 66dbed0)
- Fixes Potential Memory Conflict
  * Eliminated buffer overrun in handling `showtools`
    - The configuration resulted in a oversized memory allocation
  * Potential Memory Conflict
    - Some constants were passed to a function that reallocates memory
    - This bug was introduced in v0.14.0.AA (Commit 3fc36f5)
    - Extended in v0.14.0.AB (Commit 5cb1ed9)
- Fixes Hidden Entry Handling
  * Some loaders in ESP locations were not hidden when selected on-screen (minus key)
  * Was also the case when full paths were used in `dont_scan_files`
- Fixes Display Resolution Handling
  * User defined resolutions were not being properly handled
    - Only the default, `max`, resolution was considered
    - This meant that instances with defined resolutions were not properly displayed